Delete payload added
